<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:orientation="vertical"
    android:overScrollMode="never">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#dddddd" />


            <EditText
                android:id="@+id/login_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_icon"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"/>

            <EditText
                android:id="@+id/login_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/bg_edittext_icon"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/login_rememberMe_checkBox"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/remember_me" />

                <TextView
                    android:id="@+id/login_forgotPass_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/forgot_password"
                    android:textColor="#1386e4"
                    android:textStyle="italic" />

            </LinearLayout>


            <Button
                android:id="@+id/login_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#dddddd" />


            <Button
                android:id="@+id/login_facebookLogin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/facebook"
                android:drawableLeft="@drawable/ic_facebook_letter_logo"
                android:paddingLeft="20sp"
                android:text="@string/sign_with_facebook"
                android:textColor="#ffff" />



            <Button
                android:id="@+id/login_twitterLogin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/twitter"
                android:drawableLeft="@drawable/ic_twitter_logo_silhouette"
                android:drawablePadding="-10sp"
                android:paddingLeft="20sp"
                android:text="@string/sign_with_twitter"
                android:textColor="#ffff" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/login_createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/gotoCreateAcount"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="20sp" />



</LinearLayout>